--- a/Thief-Game/Thief-Game.csproj
+++ b/Thief-Game/Thief-Game.csproj
@@ -12,4 +12,8 @@
     <OutputPath>bin\docs\</OutputPath>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PathFinder\PathFinder.csproj" />
+  </ItemGroup>
+
 </Project>
